// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionModalList should match snapshot for Android 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "borderRadius": 2,
        "marginHorizontal": 30,
      }
    }
  >
    <Component
      style={
        Object {
          "borderBottomColor": "rgba(0, 0, 0, 0.1)",
          "borderBottomWidth": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Take Photo or Video"
          id="mobile.file_upload.camera"
          style={
            Array [
              Object {
                "color": "#000",
                "flex": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <Icon
          allowFontScaling={false}
          name="camera"
          size={18}
          style={
            Object {
              "color": "#7f8180",
            }
          }
        />
      </TouchableOpacity>
    </Component>
    <Component
      style={
        Object {
          "borderBottomColor": "rgba(0, 0, 0, 0.1)",
          "borderBottomWidth": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Photo Library"
          id="mobile.file_upload.library"
          style={
            Array [
              Object {
                "color": "#000",
                "flex": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <Icon
          allowFontScaling={false}
          name="photo"
          size={18}
          style={
            Object {
              "color": "#7f8180",
            }
          }
        />
      </TouchableOpacity>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 15,
        }
      }
    >
      <FormattedText
        defaultMessage="Cancel"
        id="channel_modal.cancel"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 16,
          }
        }
      />
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`OptionModalList should match snapshot for iOS 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
>
  <Component
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "borderRadius": 12,
        "marginBottom": 20,
        "marginHorizontal": 20,
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": 15,
          },
          Object {
            "borderBottomColor": "rgba(0, 0, 0, 0.1)",
            "borderBottomWidth": 1,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "color": "#7f8180",
            "flex": 1,
            "textAlign": "center",
          }
        }
      >
        test
      </Component>
    </Component>
    <Component
      style={
        Array [
          Object {
            "borderBottomColor": "rgba(0, 0, 0, 0.1)",
            "borderBottomWidth": 1,
          },
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Take Photo or Video"
          id="mobile.file_upload.camera"
          style={
            Array [
              Object {
                "color": "#4E8ACC",
                "flex": 1,
                "fontSize": 20,
              },
              undefined,
              false,
            ]
          }
        />
        <Icon
          allowFontScaling={false}
          name="camera"
          size={18}
          style={
            Object {
              "color": "#4E8ACC",
            }
          }
        />
      </TouchableOpacity>
    </Component>
    <Component
      style={
        Array [
          false,
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Photo Library"
          id="mobile.file_upload.library"
          style={
            Array [
              Object {
                "color": "#4E8ACC",
                "flex": 1,
                "fontSize": 20,
              },
              undefined,
              false,
            ]
          }
        />
        <Icon
          allowFontScaling={false}
          name="photo"
          size={18}
          style={
            Object {
              "color": "#4E8ACC",
            }
          }
        />
      </TouchableOpacity>
    </Component>
  </Component>
  <Component
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "borderRadius": 12,
        "marginBottom": 20,
        "marginHorizontal": 20,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 15,
        }
      }
    >
      <FormattedText
        defaultMessage="Cancel"
        id="channel_modal.cancel"
        style={
          Object {
            "color": "#CC3239",
            "flex": 1,
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      />
    </TouchableOpacity>
  </Component>
</Component>
`;
